--- a/TVCStudio/Views/Settings.xaml
+++ b/TVCStudio/Views/Settings.xaml
@@ -221,12 +221,6 @@
                                     <ColumnDefinition Width="Auto" />
                                 </Grid.ColumnDefinitions>
                                 <StackPanel Grid.Column="0">
-                                    <GroupBox Margin="0,2,0,0" Header="Kódszerkesztés" IsEnabled="False">
-                                        <StackPanel>
-                                            <CheckBox IsChecked="{Binding Path=AutoLineNumbering}" Margin="0,4,0,6">Automatikus kódsorszámozás új sor beszúrásakor</CheckBox>
-                                            <CheckBox IsChecked="{Binding Path=RemoveSpacesBeforeBuild}" Margin="0,0,0,6">Felesleges SPACE karakterek eltávolítása tokenizáláskor</CheckBox>
-                                        </StackPanel>
-                                    </GroupBox>
                                     <GroupBox Margin="3,6,0,3" Header="Kódszerkesztő stílusa">
                                         <Grid>
                                             <Grid.ColumnDefinitions>
@@ -239,6 +233,8 @@
                                                 <TextBlock Margin="0,0,0,12" VerticalAlignment="Center">String-ek színe:</TextBlock>
                                                 <TextBlock Margin="0,0,0,12" VerticalAlignment="Center">Basic kulcsszavak színe:</TextBlock>
                                                 <TextBlock Margin="0,0,0,12" VerticalAlignment="Center">Számok színe:</TextBlock>
+                                                <TextBlock Margin="0,0,0,12" VerticalAlignment="Center">Megjegyzések színe:</TextBlock>
+                                                <TextBlock Margin="0,0,0,12" VerticalAlignment="Center">Függvények színe:</TextBlock>
                                             </StackPanel>
                                             <StackPanel Grid.Column="1">
                                                 <ComboBox Margin="0,12,0,5" ItemsSource="{Binding Brushes}" SelectedItem="{Binding BasicBackgroundColor}" VerticalAlignment="Center">
@@ -276,6 +272,20 @@
                                                         </DataTemplate>
                                                     </ComboBox.ItemTemplate>
                                                 </ComboBox>
+                                                <ComboBox Margin="0,0,0,5" ItemsSource="{Binding Brushes}" SelectedItem="{Binding BasicCommentColor}" VerticalAlignment="Center">
+                                                    <ComboBox.ItemTemplate>
+                                                        <DataTemplate>
+                                                            <TextBlock Background="{Binding}" Foreground="{Binding}" Text="{Binding}"/>
+                                                        </DataTemplate>
+                                                    </ComboBox.ItemTemplate>
+                                                </ComboBox>
+                                                <ComboBox Margin="0,0,0,5" ItemsSource="{Binding Brushes}" SelectedItem="{Binding BasicUserMethodColor}" VerticalAlignment="Center">
+                                                    <ComboBox.ItemTemplate>
+                                                        <DataTemplate>
+                                                            <TextBlock Background="{Binding}" Foreground="{Binding}" Text="{Binding}"/>
+                                                        </DataTemplate>
+                                                    </ComboBox.ItemTemplate>
+                                                </ComboBox>
                                             </StackPanel>
                                         </Grid>
                                     </GroupBox>
@@ -288,14 +298,14 @@
                                                 <ColumnDefinition Width="Auto" />
                                             </Grid.ColumnDefinitions>
                                             <StackPanel Grid.Column="0">
-                                                <TextBlock Margin="0 1 0 10">Legelső kódsor sorszáma:</TextBlock>
-                                                <TextBlock Margin="0 0 0 10">Sornövekmény:</TextBlock>
+                                                <!--<TextBlock Margin="0 1 0 10">Legelső kódsor sorszáma:</TextBlock>
+                                                <TextBlock Margin="0 0 0 10">Sornövekmény:</TextBlock>-->
                                                 <TextBlock Margin="0 0 0 8">Szerkesztő betűtípusa:</TextBlock>
                                                 <TextBlock Margin="0 0 0 8">Szerkesztő betűmérete(px):</TextBlock>
                                             </StackPanel>
                                             <StackPanel Grid.Column="1">
-                                                <xctk:IntegerUpDown  Width="70" Margin="0 0 0 5" Minimum="1" Maximum="9999" Value="{Binding Path=StartRowNumber, Mode=TwoWay}" IsEnabled="False" />
-                                                <xctk:IntegerUpDown Width="70" Margin="0 0 0 5" Minimum="1" Maximum="9999" Value="{Binding Path=RowNumberIncrement, Mode=TwoWay}" IsEnabled="False" />
+                                                <!--<xctk:IntegerUpDown  Width="70" Margin="0 0 0 5" Minimum="1" Maximum="9999" Value="{Binding Path=StartRowNumber, Mode=TwoWay}" IsEnabled="False" />
+                                                <xctk:IntegerUpDown Width="70" Margin="0 0 0 5" Minimum="1" Maximum="9999" Value="{Binding Path=RowNumberIncrement, Mode=TwoWay}" IsEnabled="False" />-->
                                                 <ComboBox Margin="0 0 0 5" ItemsSource="{x:Static Fonts.SystemFontFamilies}" SelectedItem="{Binding BasicEditorFont}" />
                                                 <xctk:IntegerUpDown Width="70" Minimum="8" Maximum="50" Value="{Binding Path=BasicEditorFontSize, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" />
                                             </StackPanel>
@@ -332,6 +342,18 @@
                                                     <TextBlock FontFamily="{Binding BasicEditorFont}" FontSize="{Binding BasicEditorFontSize}" Foreground="{Binding BasicNumberColor}">40</TextBlock>
                                                     <TextBlock FontFamily="{Binding BasicEditorFont}" FontSize="{Binding BasicEditorFontSize}" Foreground="{Binding BasicKeywordColor}">NEXT</TextBlock>
                                                     <TextBlock FontFamily="{Binding BasicEditorFont}" FontSize="{Binding BasicEditorFontSize}" Foreground="{Binding BasicForegroundColor}">I</TextBlock>
+                                                </WrapPanel>
+                                                <WrapPanel>
+                                                    <TextBlock FontFamily="{Binding BasicEditorFont}" FontSize="{Binding BasicEditorFontSize}" Foreground="{Binding BasicNumberColor}">50</TextBlock>
+                                                    <TextBlock FontFamily="{Binding BasicEditorFont}" FontSize="{Binding BasicEditorFontSize}" Foreground="{Binding BasicForegroundColor}">X=</TextBlock>
+                                                    <TextBlock FontFamily="{Binding BasicEditorFont}" FontSize="{Binding BasicEditorFontSize}" Foreground="{Binding BasicUserMethodColor}">USR</TextBlock>
+                                                    <TextBlock FontFamily="{Binding BasicEditorFont}" FontSize="{Binding BasicEditorFontSize}" Foreground="{Binding BasicForegroundColor}">(</TextBlock>
+                                                    <TextBlock FontFamily="{Binding BasicEditorFont}" FontSize="{Binding BasicEditorFontSize}" Foreground="{Binding BasicNumberColor}">5678</TextBlock>
+                                                    <TextBlock FontFamily="{Binding BasicEditorFont}" FontSize="{Binding BasicEditorFontSize}" Foreground="{Binding BasicForegroundColor}">)</TextBlock>
+                                                    <TextBlock FontFamily="{Binding BasicEditorFont}" FontSize="{Binding BasicEditorFontSize}" Foreground="{Binding BasicForegroundColor}">:</TextBlock>
+                                                    <TextBlock FontFamily="{Binding BasicEditorFont}" FontSize="{Binding BasicEditorFontSize}" Foreground="{Binding BasicCommentColor}">REM</TextBlock>
+                                                    <TextBlock FontFamily="{Binding BasicEditorFont}" FontSize="{Binding BasicEditorFontSize}" Foreground="{Binding BasicCommentColor}" Text=" "></TextBlock>
+                                                    <TextBlock FontFamily="{Binding BasicEditorFont}" FontSize="{Binding BasicEditorFontSize}" Foreground="{Binding BasicCommentColor}"> Belépés a gépi kódba</TextBlock>
                                                 </WrapPanel>
                                             </StackPanel>
                                         </Grid>
