--- a/TVCStudio/Views/ProgramView.xaml
+++ b/TVCStudio/Views/ProgramView.xaml
@@ -3,11 +3,12 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:program="clr-namespace:TVCStudio.ViewModels.Program"
+             xmlns:program="clr-namespace:TVCStudio.ViewModels.Program" 
+             xmlns:converters="clr-namespace:TVCStudio.ViewModels.Converters"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="335" d:DataContext="{d:DesignInstance program:ProgramViewModel }" Margin="0 0 0 4">
     <UserControl.Resources>
-        <program:AddressConverter x:Key="MyAddressConverter" />
+        <converters:AddressConverter x:Key="MyAddressConverter" />
     </UserControl.Resources>
     <Grid>
         <Border  BorderThickness="1" BorderBrush="DarkBlue" >
